--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 
 [dependencies]
+bytemuck = { version = "1.14.0", features = [ "derive" ] }
 cgmath = "0.18.0"
 env_logger = "0.10.0"
 log = "0.4.20"
